--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="https://ajaysngh040.github.io/Airbnb-Clone/"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
